# vn-legal-ai-assistant

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  bootstrap.sh  docker-compose.yml
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.claude/agents/: code-reviewer.md  design-intake.md
.claude/commands/: design-to-code.md
.claude/hooks/: format-code.sh  format-python.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.specify/: feature.json
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/db/: __init__.py  connection.py  repository.py  schema.sql
backend/app/models/: schemas.py
backend/app/observability/: __init__.py  logging_config.py  middleware.py  otel.py  ratelimit.py  security.py
backend/app/prompts/: system.py
backend/app/providers/: __init__.py  base.py  claude.py  factory.py  ollama.py
backend/app/routers/: query.py
backend/app/services/: llm.py  rag.py  vector_store.py
backend/data/raw/: luat-dat-dai-2024.txt  luat-nha-o-2023.txt  nghi-dinh-100-2024.txt  nghi-dinh-95-2024.txt  nghi-dinh-98-2024.txt  thong-tu-05-2024-bxd.txt
backend/data/raw_html/: luat-dat-dai-2024.html  luat-nha-o-2023.html  nghi-dinh-100-2024.html  nghi-dinh-95-2024.html  nghi-dinh-98-2024.html  thong-tu-05-2024-bxd.html
backend/scripts/: chunk_legal_text.py  fetch_sources.py  html_to_legal_text.py  ingest.py  init_db.py  sources.py
backend/tests/: conftest.py  test_chunking.py  test_claude_provider.py  test_html_parser.py  test_observability.py  test_providers.py  test_query.py  test_rag.py  test_ratelimit.py  test_repository.py  test_rls_isolation.py  test_security_headers.py  test_vector_store.py
docs/: 00-glossary.md  CONSTITUTION_APPEND.md  TEAM-WORKFLOW.md  architecture.md
frontend/: .env.local.example  .gitignore  next.config.ts  package-lock.json  package.json  playwright.config.ts  proxy.ts  vitest.config.ts
plugin/: README.md
supabase/: config.toml
(+101 files in other folders)
