[project]
name = "vn-legal-backend"
version = "0.1.0"
description = "Vietnamese Legal AI Assistant - RAG Backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "psycopg[binary,pool]>=3.2",
    "pgvector>=0.3",
    "httpx>=0.27.0",
    "pydantic-settings>=2.5.0",
    "anthropic>=0.40",
    "slowapi>=0.1.9",
    "python-json-logger>=3.0",
    "prometheus-fastapi-instrumentator>=7.0",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-exporter-otlp-proto-http>=1.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0",
    "respx>=0.21.0",
    "ruff>=0.7.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: requires running Ollama + Postgres/pgvector",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.coverage.run]
source = ["app"]
omit = ["tests/*"]
